--- a/treasure.html
+++ b/treasure.html
@@ -31,5 +31,93 @@
 </div>
 <br>
 
+<div class="container"> 
+    <div class="image-row d-flex justify-content-center">
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div > 
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div>
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+    </div>
+    <div class="image-row d-flex justify-content-center">
+        <div>
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div>
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+    </div>
+    <div class="image-row d-flex justify-content-center">
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+    </div>
+    <div class="image-row d-flex justify-content-center">
+        <div>
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div>
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+    </div>   
+    <div class="image-row d-flex justify-content-center">
+        <div >
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div class="col">
+        <div>
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div>
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div>
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+        <div>
+            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+        </div>
+    </div>
+    </div>
+
 </body>
 </html>
