--- a/treasure.html
+++ b/treasure.html
@@ -74,7 +74,7 @@
             <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img src="help.jpg" alt="treasureChest" height="150" width="150">
         </div>
         <div >
             <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
