--- a/treasure.html
+++ b/treasure.html
@@ -23,7 +23,7 @@
 <div class="container border" style="background-color:bisque ;" id="chests">
     <p style="color:black">Number of chests checked is zeroScore is unknown</p></p>
 </div>
-<div class="container border " style="background-color:darksalmon ;" id="Score">
+<div class="container border " style="background-color:darksalmon ;" id="score">
     <p>Score is unknown</p>
 </div>
 <div class="container border background-color" style="background-color:lavender" id="help">
@@ -34,90 +34,145 @@
 <div class="container"> 
     <div class="image-row d-flex justify-content-center">
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img0" src="treasurechest.webp" alt="treasureChest" onclick="check(0)"  height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img1" src="treasurechest.webp" alt="treasureChest" onclick="check(1)"  height="150" width="150">
         </div>
         <div > 
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img2" src="treasurechest.webp" alt="treasureChest" onclick="check(2)"  height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img3" src="treasurechest.webp" alt="treasureChest"  onclick="check(3)" height="150" width="150">
         </div>
         <div>
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img4"  src="treasurechest.webp" alt="treasureChest" onclick="check(4)"  height="150" width="150">
         </div>
     </div>
     <div class="image-row d-flex justify-content-center">
         <div>
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img5" src="treasurechest.webp" alt="treasureChest" onclick="check(5)"  height="150" width="150">
         </div>
         <div>
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img6" src="treasurechest.webp" alt="treasureChest" onclick="check(6)"  height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img7" src="treasurechest.webp" alt="treasureChest"  onclick="check(7)" height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img8" src="treasurechest.webp" alt="treasureChest"  onclick="check(8)" height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img9" src="treasurechest.webp" alt="treasureChest"  onclick="check(9)" height="150" width="150">
         </div>
     </div>
     <div class="image-row d-flex justify-content-center">
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img10" src="treasurechest.webp" alt="treasureChest"  onclick="check(10)" height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img11" src="treasurechest.webp" alt="treasureChest"  onclick="check(11)" height="150" width="150">
         </div>
         <div >
-            <img src="help.jpg" alt="treasureChest" height="150" width="150">
+            <img id="helpImg" src="help.jpg" alt="treasureChest"   onclick="help()" height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img13" src="treasurechest.webp" alt="treasureChest" onclick="check(13)"  height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img14" src="treasurechest.webp" alt="treasureChest"  onclick="check(14)" height="150" width="150">
         </div>
     </div>
     <div class="image-row d-flex justify-content-center">
         <div>
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img15" src="treasurechest.webp" alt="treasureChest" onclick="check(15)"  height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img16" src="treasurechest.webp" alt="treasureChest" onclick="check(16)"  height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img17" src="treasurechest.webp" alt="treasureChest"  onclick="check(17)" height="150" width="150">
         </div>
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img18" src="treasurechest.webp" alt="treasureChest"  onclick="check(18)" height="150" width="150">
         </div>
         <div>
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img19" src="treasurechest.webp" alt="treasureChest"  onclick="check(19)" height="150" width="150">
         </div>
     </div>   
     <div class="image-row d-flex justify-content-center">
         <div >
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img20" src="treasurechest.webp" alt="treasureChest" onclick="check(20)"  height="150" width="150">
         </div class="col">
         <div>
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img21" src="treasurechest.webp" alt="treasureChest"  onclick="check(21)" height="150" width="150">
         </div>
         <div>
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img22" src="treasurechest.webp" alt="treasureChest" onclick="check(22)"  height="150" width="150">
         </div>
         <div>
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img23" src="treasurechest.webp" alt="treasureChest"  onclick="check(23)" height="150" width="150">
         </div>
         <div>
-            <img src="treasurechest.webp" alt="treasureChest" height="150" width="150">
+            <img id="img24" src="treasurechest.webp" alt="treasureChest" onclick="check(24)"  height="150" width="150">
         </div>
     </div>
     </div>
 
+
+
+<script>
+    var ids = []
+    for (var i = 0; i <= 24; i++)
+        ids.push("img" + i)
+
+    var chestCount = 0
+    var score = 0
+    var lastCheck = 12
+    var treasureLocation = 18
+    
+    function check(position) {
+        var imgID = ids[position]
+
+        if (position == treasureLocation)
+            document.getElementById(imgID).src ="./treasure.avif" 
+        else
+            document.getElementById(imgID).src = "./sademoji.png"
+
+        chestCount++
+        score++
+        document.getElementById("chests").innerHTML = "Number of chests checked is " + chestCount + "."
+        document.getElementById("score").innerHTML = "Score is " + score + "."
+        lastCheck = position
+    }
+
+    function help() {
+        row = lastCheck % 5
+        col = Math.floor(lastCheck / 5)
+
+        rowTresure = treasureLocation % 5
+        colTresure = Math.floor(treasureLocation / 5)
+
+        score = score + 2
+        document.getElementById("score").innerHTML = "Score is " + score + "."
+        
+        if (row == rowTresure && lastCheck != treasureLocation) {
+            if (col > colTresure)
+                document.getElementById("help").innerHTML = "up"
+            else
+                document.getElementById("help").innerHTML = "down"
+        } else if (col == colTresure && lastCheck != treasureLocation) {
+            if (row > rowTresure)
+                document.getElementById("help").innerHTML = "left"
+            else
+                document.getElementById("help").innerHTML = "right"
+        } else if (lastCheck == treasureLocation) {
+            document.getElementById("help").innerHTML = "already won the game"
+        } else {
+            document.getElementById("help").innerHTML = "sorry, no help available"
+        }
+    }
+    </script>
 </body>
+
 </html>
