--- a/reaction.html
+++ b/reaction.html
@@ -27,6 +27,7 @@
     <div class="container">
         <button type="button" class="btn btn-primary" onclick="startTime()">Start Timer</button>
         <button type="button" class="btn btn-primary" onclick="recordReact()">React Now</button>
+        <button type="button" class="btn btn-primary" onclick="randomStart()">Random Start</button>
        
     </div>
     <script>
