--- a/treasure.html
+++ b/treasure.html
@@ -172,6 +172,22 @@
             document.getElementById("help").innerHTML = "sorry, no help available"
         }
     }
+
+    function newGame() {
+        chestCount = 0
+        score = 0
+        treasureLocation = Math.floor(Math.random() * 24)
+        if(treasureLocation == 12)
+            treasureLocation = 12 + Math.floor(Math.random() * 12)
+
+        document.getElementById("chests").innerHTML = "Number of chests checked is zero."
+        document.getElementById("score").innerHTML = "Score is unknown."
+
+        for (var i = 0; i <= 24; i++) {
+            if(i != 12)
+                document.getElementById(ids[i]).src = "./treasurechest.webp"
+        }
+    }
     </script>
 </body>
 
