--- a/treasure.html
+++ b/treasure.html
@@ -29,6 +29,8 @@
 <div class="container border background-color" style="background-color:lavender" id="help">
     <p>Help report</p>
 </div>
+<div class="container">
+    <button type="button" class="btn btn-primary" onclick="newGame()">New Game</button>
 <br>
 
 <div class="container"> 
